--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
   
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewportx">
   
   <link rel="stylesheet" type="text/css" href="splash/style.css">
   <script src="splash/splash.js"></script>
